--- a/src/index.css
+++ b/src/index.css
@@ -125,6 +125,6 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-a{
-  text-decoration: none;
+ a {
+  text-decoration: none !important;
 }
